# Amanitin

decryptor/: Cargo.toml
decryptor/src/: main.rs
encryptor/: Cargo.toml
encryptor/src/: encryptor.rs  main.rs  registry.rs  win_api.rs
resources/: display-note.txt
shared/: Cargo.toml
shared/src/: crypto.rs  hash.rs  lib.rs
